--- a/src/ui/Dockerfile.01
+++ b/src/ui/Dockerfile.01
@@ -1,4 +1,4 @@
-FROM alpine:3.9
+FROM ubuntu:16.04
 RUN apt-get update \
     && apt-get install -y ruby-full ruby-dev build-essential \
     && gem install bundler --no-ri --no-rdoc
