--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,9 +2,11 @@ version: "3.3"
 
 volumes:
   reddit-db:
+  prometheus_data:
 
 networks:
   reddit:
+  prom-net:
 
 services:
   post-db:
@@ -12,6 +14,7 @@ services:
     container_name: post-db
     restart: always
     networks:
+      prom-net:
       reddit:
         aliases:
           - post_db
@@ -20,28 +23,45 @@ services:
       - ./reddit-db:/data/db
 
   post:
-    image: ${USERNAME}/post:${POST_VER}
+    image: ${USER_NAME}/post:${POST_VER}
     container_name: post
     restart: always
     networks:
+      prom-net:
       reddit:
         aliases:
           - post
 
   comment:
-    image: ${USERNAME}/comment:${COMMENT_VER}
+    image: ${USER_NAME}/comment:${COMMENT_VER}
     container_name: comment
     restart: always
     networks:
+      prom-net:
       reddit:
         aliases:
           - comment
 
   ui:
-    image: ${USERNAME}/ui:${UI_VER}
+    image: ${USER_NAME}/ui:${UI_VER}
     container_name: ui
     restart: always
     networks:
+      prom-net:
       reddit:
     ports:
       - 9292:9292
+
+  prometheus:
+    image: ${USER_NAME}/prometheus
+    restart: always
+    networks:
+      prom-net:
+    ports:
+      - '9090:9090'
+    volumes:
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention=1d'
