do some for prepare

--- a/_archive/src/post-py/Dockerfile.00
+++ b/_archive/src/post-py/Dockerfile.00
@@ -2,7 +2,7 @@ FROM python:3.6.0-alpine
 
 WORKDIR /app
 ADD . /app
-RUN apk add --no-cache build-base gcc musl-dev
+RUN apk add --no-cache build-base gcc
 RUN pip install -r /app/requirements.txt
 
 ENV POST_DATABASE_HOST post_db
