add regex filter for ui in fluentd

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -67,3 +67,8 @@ services:
           - ui
     ports:
       - 9292:9292
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.ui
