--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.0"
 
 volumes:
   reddit-db:
@@ -24,6 +24,8 @@ services:
           - comment_db
     volumes:
       - ./reddit-db:/data/db
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
 
   post:
     image: ${USER_NAME}/post:${POST_VER}
@@ -41,6 +43,8 @@ services:
       options:
         fluentd-address: localhost:24224
         tag: service.post
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
 
   comment:
     image: ${USER_NAME}/comment:${COMMENT_VER}
@@ -53,6 +57,8 @@ services:
       reddit:
         aliases:
           - comment
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
 
   ui:
     image: ${USER_NAME}/ui:${UI_VER}
@@ -72,3 +78,5 @@ services:
       options:
         fluentd-address: localhost:24224
         tag: service.ui
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
