--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,5 +1,17 @@
+#COMPOSE_PROJECT_NAME=puma-app
 USER_NAME=avzhalnin
 MONGO_VER=3.2
-POST_VER=latest
-UI_VER=latest
-COMMENT_VER=latest
+
+#POST_VER=1.0
+#UI_VER=1.0
+#COMMENT_VER=1.0
+
+#POST_VER=latest
+#UI_VER=latest
+#COMMENT_VER=latest
+
+POST_VER=logging
+UI_VER=logging
+COMMENT_VER=logging
+
+ZIPKIN_ENABLED=true
