update comment, post manifests and deploy them

--- a/kubernetes/reddit/post-deployment.yml
+++ b/kubernetes/reddit/post-deployment.yml
@@ -2,18 +2,23 @@
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
-  name: post-deployment
+  name: post
+  labels:
+    app: post
+    component: post
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: post
+      component: post
   template:
     metadata:
       name: post
       labels:
         app: post
+        component: post
     spec:
       containers:
-      - image: chromko/post
+      - image: avzhalnin/post
         name: post
