--- a/kubernetes/reddit/comment-deployment.yml
+++ b/kubernetes/reddit/comment-deployment.yml
@@ -22,3 +22,6 @@ spec:
       containers:
       - image: avzhalnin/comment
         name: comment
+        env:
+        - name: COMMENT_DATABASE_HOST
+          value: comment-db
