--- a/kubernetes/reddit/post-deployment.yml
+++ b/kubernetes/reddit/post-deployment.yml
@@ -22,3 +22,6 @@ spec:
       containers:
       - image: avzhalnin/post
         name: post
+        env:
+        - name: POST_DATABASE_HOST
+          value: post-db
