fix some for His Majesty Travis The Great!

--- a/kubernetes/reddit/post-deployment.yml
+++ b/kubernetes/reddit/post-deployment.yml
@@ -4,19 +4,19 @@ kind: Deployment
 metadata:
   name: post
   labels:
-    app: post
+    app: reddit
     component: post
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: post
+      app: reddit
       component: post
   template:
     metadata:
       name: post
       labels:
-        app: post
+        app: reddit
         component: post
     spec:
       containers:
