--- a/kubernetes/reddit/ui-service.yml
+++ b/kubernetes/reddit/ui-service.yml
@@ -7,9 +7,9 @@ metadata:
     app: reddit
     component: ui
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-  - port: 80
+  - port: 9292
     nodePort: 32092
     protocol: TCP
     targetPort: 9292
