--- a/kubernetes/Charts/ui/templates/ingress.yaml
+++ b/kubernetes/Charts/ui/templates/ingress.yaml
@@ -2,12 +2,14 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ui
+  name: {{ .Release.Name }}-{{ .Chart.Name }}
+  annotations:
+    kubernetes.io/ingress.class: "gce"
 spec:
   rules:
   - http:
       paths:
       - path: /*
         backend:
-          serviceName: ui
+          serviceName: {{ .Release.Name }}-{{ .Chart.Name }}
           servicePort: 9292
