--- a/kubernetes/Charts/prometheus/custom_values.yaml
+++ b/kubernetes/Charts/prometheus/custom_values.yaml
@@ -807,7 +807,16 @@ serverFiles:
             action: replace
             target_label: kubernetes_pod_name
 
+      - job_name: 'reddit-endpoints'
+        kubernetes_sd_configs:
+          - role: endpoints
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_service_label_app]
+            action: keep
+            regex: reddit
+
 networkPolicy:
   ## Enable creation of NetworkPolicy resources.
   ##
   enabled: false
+
