--- a/kubernetes/Charts/prometheus/custom_values.yaml
+++ b/kubernetes/Charts/prometheus/custom_values.yaml
@@ -807,13 +807,29 @@ serverFiles:
             action: replace
             target_label: kubernetes_pod_name
 
-      - job_name: 'reddit-endpoints'
+      - job_name: 'comment-endpoints'
         kubernetes_sd_configs:
           - role: endpoints
         relabel_configs:
           - source_labels: [__meta_kubernetes_service_label_app]
             action: keep
-            regex: reddit
+            regex: comment
+
+      - job_name: 'post-endpoints'
+        kubernetes_sd_configs:
+          - role: endpoints
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_service_label_app]
+            action: keep
+            regex: post
+
+      - job_name: 'ui-endpoints'
+        kubernetes_sd_configs:
+          - role: endpoints
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_service_label_app]
+            action: keep
+            regex: ui
 
       - job_name: 'reddit-production'
         kubernetes_sd_configs:
